src/test/resources/syntactic/error/TC_ERROR_HERENCIA.ru
/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 4 | COLUMNA 10 | SE ESPERABA: Bool, Array, Str, Int, id Struct, Char Y SE ENCONTRO: { |
struct A:{  /? herencia sin Tipo 

}
start{

}